Fixed the layout issues with providing base flex grow

--- a/public/style.css
+++ b/public/style.css
@@ -65,6 +65,8 @@ a:hover {
   flex-basis: 22%;
   border: 1px dashed #ccc;
   padding: 2%;
+  flex-grow:1;
+  flex-basis: 22%;
 }
 
 .content .product:last-child{
@@ -75,6 +77,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 
 }
 .content .product .product-details h2 {
@@ -91,6 +94,7 @@ a:hover {
   font-size: 1em;
 }
 .content .product .product-details button {
+  align-self: stretch;
   margin: 1em;
   background-color: #333333;
   border: 1px solid #ddd;
